# cmake_practice

./: .gitignore  CMakeLists.txt  README.md
cpp_exec/: CMakeLists.txt  main.cpp
cpp_lib/: CMakeLists.txt  function_example.cpp  hello_world.cpp
cpp_lib/include/cpp_lib/: function_example.h
